--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello world ! 👋≧◉ᴥ◉≦</h1>
+<h1>Hello world ! :D </h1>
 <p>From first ErwanB's website</p>
 </body>
 </html>
